Fixed scrollbar.
git-svn-id: svn://mona.davinci.nl/lisa/bioshock/trunk@3131 e4814794-f0f8-11e1-949a-37c09b20bee5

--- a/Lisa.Bioshock/Content/CodeMirror/codemirror.css
+++ b/Lisa.Bioshock/Content/CodeMirror/codemirror.css
@@ -5,7 +5,7 @@
   font-family: "Droid Sans Mono";
   height: 100%;
   font-size: 15px;
-  -overflow:hidden !important;
+  overflow:hidden !important;
 
 }
 
@@ -20,7 +20,7 @@
 
 .CodeMirror-scroll {
   /* Set scrolling behaviour here */
-  overflow: hidden;
+  overflow: scroll;
 }
 
 /* PADDING */
