--- a/Lisa.Bioshock/Content/Site.css
+++ b/Lisa.Bioshock/Content/Site.css
@@ -218,7 +218,6 @@ textarea {
     height: 100%;
     z-index: 999;
     background-color: #101012;
-    opacity: 0.8;
     position:absolute;
 }
 
@@ -248,9 +247,10 @@ textarea {
 }
 
 
-#newFileContent .filter_query_wrap {float:left; position:absolute; top:15px; top: 57px; left: 25%; right:0px; right:20px; width:600px;}
-#newFileContent #newFileName{ outline: 0; font-size: 18px; float: left; position:absolute; display:block; width:70%; height:50px; background:rgb(0, 0, 0); padding:0 0 0 10px;
+#newFileContent .filter_query_wrap {float:left; position:absolute; top: 40px; left: 25%; right:0px; right:20px; width:850px;}
+#newFileContent #newFileName{ outline: 0; font-size: 30px; float: left; position:absolute; display:block; width:70%; height:80px; background:rgb(0, 0, 0); padding:0 0 0 10px;
     border:none; border-bottom:2px solid rgb(38, 38, 38);
+    font-family: 'Source Sans Pro', sans-serif;
     color:#fff;}
 
 #newFileName::-webkit-input-placeholder { 
@@ -272,19 +272,19 @@ textarea {
 #addButton{
     border-bottom:2px solid rgb(38, 38, 38);
     float: right;
-    background: rgb(0, 0, 0) url(Images/Sprite2.png) no-repeat 10px 8px;
+    background: rgb(0, 0, 0) url(Images/Sprite2.png) no-repeat 10px 22px;
     padding: 0;
     margin: 0;
-    height: 50px;
-    width: 50px;
+    height: 80px;
+    width: 60px;
     margin:auto;
     position: absolute;
-    left: 430px;
+    left: 605px;
     vertical-align: middle;
 }
 
     #addButton:hover {
-        background-position: -62px -10px;
+        background-position: -62px 4px;
     }
 
 
